
** libgss: New header file gss/krb5-ext.h used for GNU GSS specific extensions.
Before gss/krb5.h was used for both offical and GNU GSS prototypes.

** libgss: The version script version is now GSS_0.1.0 instead of GSS_1.0.
The use of GSS_1.0 in the last release was unfortunate, and by making
a rapid follow-up release we hope to mitigate the consequences.
Please don't use version 0.0.26.

** doc: The GTK-DOC manual is now built properly.

** Fix compilation error with Sun Studio related to missing getopt.
Reported by Dagobert Michelsen <dam@opencsw.org> in
<http://permalink.gmane.org/gmane.comp.gnu.gss.general/142>.

** API and ABI modifications.
GSS_KRB5_NT_MACHINE_UID_NAME: ADDED
GSS_KRB5_NT_MACHINE_UID_NAME_static: ADDED
gss_alloc_fail_function: REMOVED
gss_krb5*: REMOVED

* Version 0.0.26 (released 2009-03-27)

** libgss: The library will now return error codes when out of memory.
The gss_alloc_fail_function variable is no longer declared, but is
still available in the library for ABI compatibility.

** libgss: Use a LD version script on platforms where it is supported.
Currently only GNU LD and the Solaris linker supports it.  This helps
Debian package tools to produce better dependencies.  Before we used
Libtool -export-symbols-regex that created an anonymous version tag.
We use -export-symbols-regex when the system does not support LD
version scripts, but that only affect symbol visibility.

** API and ABI modifications.
gss_alloc_fail_function: No longer declared in header file.

* Version 0.0.25 (released 2009-02-26)

** gss: Improve --help and --version output.

** doc: Change license on the manual to GFDLv1.3+.

** More compiler warnings enabled, and many warnings fixed.

** API and ABI modifications.
No changes since last version.

* Version 0.0.24 (released 2008-09-10)

** Fix non-portable use of brace expansion in makefiles.

** Update gnulib files.

** Fix some warnings and make distcheck build the software with -Werror.
