@@ -35,4 +35,11 @@
     <xi:include href="xml/krb5.xml"/>
     <xi:include href="xml/krb5-ext.xml"/>
   </chapter>
+
+  <index>
+    <title>Index</title>
+  </index>
+  <index role="0.1.0">
+    <title>Index of new symbols in 0.1.0</title>
+  </index>
 </book>
