@@ -23,19 +23,70 @@
 #ifndef _GSS_H
 #define _GSS_H
 
-#ifdef __cplusplus
+# ifdef __cplusplus
 extern "C" {
-#endif
+# endif
 
-#define GSS_VERSION "@VERSION@"
+  /**
+   * GSS_VERSION
+   *
+   * Pre-processor symbol with a string that describe the header file
+   * version number.  Used together with gss_check_version() to verify
+   * header file and run-time library consistency.
+   */
+# define GSS_VERSION "@VERSION@"
 
-#include <gss/api.h>
-#include <gss/ext.h>
+  /**
+   * GSS_VERSION_MAJOR
+   *
+   * Pre-processor symbol with a decimal value that describe the major
+   * level of the header file version number.  For example, when the
+   * header version is 1.2.3 this symbol will be 1.
+   *
+   * Since: 0.1.0
+   */
+# define GSS_VERSION_MAJOR @VERSION_MAJOR@
+
+  /**
+   * GSS_VERSION_MINOR
+   *
+   * Pre-processor symbol with a decimal value that describe the minor
+   * level of the header file version number.  For example, when the
+   * header version is 1.2.3 this symbol will be 2.
+   *
+   * Since: 0.1.0
+   */
+# define GSS_VERSION_MINOR @VERSION_MINOR@
+
+  /**
+   * GSS_VERSION_PATCH
+   *
+   * Pre-processor symbol with a decimal value that describe the patch
+   * level of the header file version number.  For example, when the
+   * header version is 1.2.3 this symbol will be 3.
+   *
+   * Since: 0.1.0
+   */
+# define GSS_VERSION_PATCH @VERSION_PATCH@
+
+  /**
+   * GSS_VERSION_NUMBER
+   *
+   * Pre-processor symbol with a hexadecimal value describing the
+   * header file version number.  For example, when the header version
+   * is 1.2.3 this symbol will have the value 0x010203.
+   *
+   * Since: 0.1.0
+   */
+# define GSS_VERSION_NUMBER @VERSION_NUMBER@
+
+# include <gss/api.h>
+# include <gss/ext.h>
 @INCLUDE_GSS_KRB5@
 @INCLUDE_GSS_KRB5_EXT@
 
-#ifdef __cplusplus
+# ifdef __cplusplus
 }
-#endif
+# endif
 
 #endif /* _GSS_H */
